 2007-11-06 beckerl <becker.larry@gmail.com>
          * Fixed File->Save View as Raster bug with the Metal L&F that caused
            the save file name text box to dissappear.  Moved the Save World File
            check box to the top of the dialog.  Also added an X edit box that
            defaults to the view's X width, but can be changed to any value up to
            3800 to save a high resolution image.  A fence icon appears to the left
            of the X box if there is a fence layer, indicating taht it will be
            used in place of the view window to define the picture bounds.
            
2007-10-30 Paul Austin <paul.austin@revolsys.com
  * Improved the PastePlugin to support point coordinates in the form (1.0,1,1)
    or (1 1 1) with any ammount of white space. Multiple points can be pasted
    at the same time.
  * Added support for plug-ins to have their own I18N resource bundles.

2007-10-25 Andreas Schmitz <schmitz@lat-lon.de>
	pom.xml:
	Added main class entry to manifest.

2007-10-24 Paul Austin <paul.austin@revolsys.com
          * Changed the AddWmsLayerPlugin to use the new WMS wizard and improved
            the invalid URL handling so next is not available until a potential
            valid URL is entered.
          * Minor enhancements to the Open framework

2007-10-24 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,
      src/de/latlon/deejump/plugin/style/DeeRenderingStylePanel.java,
      src/com/vividsolutions/jump/workbench/ui/style/BasicStylePanel.java:
      Fixed item 1 of issue
      http://sourceforge.net/tracker/index.php?func=detail&aid=1691836&group_id=118054&atid=679906

2007-10-24 Andreas Schmitz <schmitz@lat-lon.de>
	  src/com/vividsolutions/jump/workbench/imagery/geotiff/GeoTIFFRaster.java:
	  Fixed reading of TIFF rasters with world files.

2007-10-19 Andreas Schmitz <schmitz@lat-lon.de>
      src/language/jump_it.properties,